--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ server:
 spring:
   datasource:
     name: test
-    url: jdbc:mysql://192.168.1.112:3306/test
+    url: jdbc:mysql://192.168.1.112:3306/test2
     username: root
     password: xxx
     # 使用druid数据源
