--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,11 @@ server:
 spring:
   datasource:
     name: test
-    url: jdbc:mysql://192.168.1.112:3306/test
+    url: jdbc:mysql://192.168.1.112:3306/test3
     username: root
     password: xxx
     # 使用druid数据源
-    type: com.alibaba.druid.pool.DruidDataSource
+   # type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
     filters: stat
     maxActive: 20
