--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,12 +7,12 @@ server:
 spring:
   datasource:
     name: test
-    url: jdbc:mysql://192.168.1.112:3306/test3
+    url: jdbc:mysql://192.168.1.112:3306/test
     username: root
     password: xxx
     # 使用druid数据源
    # type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
+#   driver-class-name: com.mysql.jdbc.Driver
     filters: stat
     maxActive: 20
     initialSize: 1
