--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,21 @@
-
-#application.yml
-
 server:
-  port: 8086
+  port: 8080
+mail:
+  fromMail:
+    addr: '15703758412@163.com  '
 
 spring:
+  mail:
+    default-encoding: UTF-8
+    host: 'smtp.qiye.163.com '
+    password: '1042.yjz '
+    username: '15703758412@163.com '
+
   datasource:
     name: test
-
     url: jdbc:mysql://192.168.1.112:3306/test
     username: root
     password: xxx
-
-    # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
     filters: stat
